fixing layout > footer

--- a/codex/translations/fr/LC_MESSAGES/messages.po
+++ b/codex/translations/fr/LC_MESSAGES/messages.po
@@ -241,6 +241,6 @@ msgid ""
 "Interactive AB, and are used with permission. All rights reserved. For "
 "more information please visit"
 msgstr ""
-"Des parties du matériel sont la propriété et les marques déposées de "
+"Des parties du matériel utilisé sont la propriété et les marques déposées de "
 "ParadoxInteractive AB, et sont utilisées avec autorisation. Tous droits "
 "réservés. Pour plus d'informations, merci de visiter"
